overflow fixed

--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -4,7 +4,7 @@ body {
   font-family: 'Arial', sans-serif;
   background: linear-gradient(to bottom, #eaf7ff, #d4e9d9);
   color: #202022;
-  overflow: hidden;
+  overflow: auto;
   width: 100%;
   height: 100vh;
 }
